# CasaAutomatica

./: Aparelho.cpp  Aparelho.h  Aquecedor.cpp  Aquecedor.h  Aspersor.cpp  Aspersor.h  CMakeLists.txt  Comando.cpp  Comando.h  Habitacao.cpp  Habitacao.h  Interface.cpp  Interface.h  Lampada.cpp  Lampada.h  Processador.cpp  Processador.h  Propriedade.cpp  Propriedade.h  Refrigerador.cpp  Refrigerador.h  Regra.cpp  Regra.h  RegraBase.cpp  RegraBase.h  Regra_Igual.cpp  Regra_Igual.h  Regra_entre.cpp  Regra_entre.h  Regra_fora.cpp  Regra_fora.h  Regra_maior.cpp  Regra_maior.h  Regra_menor.cpp  Regra_menor.h  Sensor.cpp  Sensor.h  Terminal.h  UI.cpp  UI.h  (+3 more)
project/: Aparelho.cpp  Aparelho.h  Aquecedor.h  Aspersor.cpp  Habitacao.cpp  Habitacao.h  Lampada.h  Processador.cpp  Processador.h  Propriedade.h  README.md  RegraBase.cpp  RegraBase.h  Regra_Igual.cpp  Regra_entre.cpp  Regra_maior.cpp  Regra_maior.h  Regra_menor.cpp  Sensor.cpp  UI.cpp  UI.h  Zona.h
